hphp/hack/test/typecheck/modules/module_first5.php
<?hh
<<file:__EnableUnstableFeatures("modules")>>
namespace Foo;
module bar;
